--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,2 +1,4 @@
 streamlit
 markitdown
+openai     # Optional: markitdown uses this for some advanced description features
+requests   # Required dependency often missed
